--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,13 +137,13 @@ jobs:
       with:
         fetch-depth: 0 
 
-    - name: Restore emissions history cache
-      uses: actions/cache@v3
-      with:
-        path: emissions_history.csv
-        key: ${{ runner.os }}-emissions-history
-        restore-keys: |
-          ${{ runner.os }}-emissions-history
+    #- name: Restore emissions history cache
+    #  uses: actions/cache@v3
+    #  with:
+    #    path: emissions_history.csv
+    #    key: ${{ runner.os }}-emissions-history
+    #    restore-keys: |
+    #      ${{ runner.os }}-emissions-history
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -168,9 +168,19 @@ jobs:
 
     - name: Append latest run to history
       run: |
-        ts=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-        read -r _ _ em en < <(tail -n1 emissions.csv)
-        echo "${ts},${em},${en}" >> emissions_history.csv
+        python - << 'EOF'
+        import pandas as pd
+        from datetime import datetime
+
+        # load new emission
+        new = pd.read_csv("emissions.csv").iloc[-1]
+        row = {
+          "timestamp": datetime.utcnow().strftime("%Y-%m-%dT%H:%M:%SZ"),
+          "emissions_kg": new.emissions,
+          "energy_kwh": new.energy_consumed
+        }
+        pd.DataFrame([row]).to_csv("emissions_history.csv", mode="a", header=False, index=False)
+        EOF
 
     - name: Generate trend plot
       run: |
