--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,13 +137,13 @@ jobs:
       with:
         fetch-depth: 0 
 
-    #- name: Restore emissions history cache
-    #  uses: actions/cache@v3
-    #  with:
-    #    path: emissions_history.csv
-    #    key: ${{ runner.os }}-emissions-history
-    #    restore-keys: |
-    #      ${{ runner.os }}-emissions-history
+    - name: Restore emissions history cache
+      uses: actions/cache@v3
+      with:
+        path: emissions_history.csv
+        key: ${{ runner.os }}-emissions-history
+        restore-keys: |
+          ${{ runner.os }}-emissions-history
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -164,10 +164,6 @@ jobs:
       run: |
         if [ ! -f emissions_history.csv ]; then
           echo "timestamp,emissions_kg,energy_kwh" > emissions_history.csv
-        else
-          # existing file → if it still has a "date" header, rename it
-          head -1 emissions_history.csv | grep -q '^date,' && \
-            sed -i '1s/^date,/timestamp,/' emissions_history.csv
         fi
 
     - name: Append latest run to history
