--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,10 +193,15 @@ jobs:
 
         hist = pd.read_csv("emissions_history.csv", parse_dates=["timestamp"])
         plt.plot(hist.timestamp, hist.emissions_kg)
-        plt.xlabel("Date")
+        plt.xlabel("Datetime")
         plt.ylabel("CO₂ emissions (kg)")
         plt.tight_layout()
         plt.savefig("emissions_trend.png")
+        plt.plot(hist.timestamp, hist.energy_kwh)
+        plt.xlabel("Datetime")
+        plt.ylabel("Energy used (KwH)")
+        plt.tight_layout()
+        plt.savefig("energy_trend.png")
         EOF
 
     - name: Ensure README exists and embed graph
@@ -219,7 +224,7 @@ jobs:
         # Replace content between the markers
         awk '
           BEGIN {in_block=0}
-          /<!-- EMISSIONS_GRAPH -->/ {print; print "![Emissions Over Time](emissions_trend.png)"; in_block=1; next}
+          /<!-- EMISSIONS_GRAPH -->/ {print; print "![Emissions Over Time](emissions_trend.png)\n![Energy usage Over Time](energy_trend.png)"; in_block=1; next}
           /<!-- END_EMISSIONS_GRAPH -->/ {in_block=0}
           !in_block
         ' README.md > temp.md && mv temp.md README.md
@@ -228,7 +233,7 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add emissions_history.csv emissions_trend.png README.md
+        git add emissions_history.csv emissions_trend.png energy_trend.png README.md
 
     - name: Create Pull Request for trend update
       id: create_pr
