--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -234,7 +234,7 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add emissions_history.csv README_emissions_trend.png README_energy_trend.png README.md
+        git add README_emissions_trend.png README_energy_trend.png README.md
 
     - name: Create Pull Request for trend update
       id: create_pr
