--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,29 +128,29 @@ jobs:
 #        issue-number: ${{ github.event.pull_request.number }}
 #        body-path: emissions.md
 
-#  #============================================================================================
-#  # GRAPH   ===================================================================================
-#  #============================================================================================
-#  graph:
-#    needs: execute
-#    if: github.event_name == 'push'
-#
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - name: Checkout code
-#      uses: actions/checkout@v3
-#      with:
-#        fetch-depth: 0 
-#
-#    - name: Set up Python
-#      uses: actions/setup-python@v4
-#      with:
-#        python-version: '3.x'
-#
-#    - name: Install plotting deps
-#      run: pip install pandas matplotlib
-#
+  #============================================================================================
+  # GRAPH   ===================================================================================
+  #============================================================================================
+  graph:
+    needs: execute
+    if: github.event_name == 'push'
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+
+    - name: Install plotting deps
+      run: pip install pandas matplotlib
+
 #    # import emmisions.csv as artifact
 #    - name: Download the emissions artifact
 #      uses: actions/download-artifact@v4
@@ -228,12 +228,12 @@ jobs:
 #          !in_block
 #        ' README.md > temp.md && mv temp.md README.md
 #
-#    - name: Commit changes
-#      run: |
-#        git config user.name "github-actions[bot]"
-#        git config user.email "github-actions[bot]@users.noreply.github.com"
-#        git add emissions_history.csv README_emissions_trend.png README_energy_trend.png README.md
-#
+    - name: Commit changes
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add --all
+
 #    - name: Create Pull Request for trend update
 #      id: create_pr
 #      uses: peter-evans/create-pull-request@v5
