--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,13 +151,13 @@ jobs:
     - name: Install plotting deps
       run: pip install pandas matplotlib
 
-#    # import emmisions.csv as artifact
-#    - name: Download the emissions artifact
-#      uses: actions/download-artifact@v4
-#      with:
-#        name: emissions
-#        path: .
-#
+    # import emmisions.csv as artifact
+    - name: Download the emissions artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: emissions
+        path: .
+
 #    - name: Initialize history CSV if missing
 #      run: |
 #        if [ ! -f emissions_history.csv ]; then
