--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,13 +164,13 @@ jobs:
           mkdir -p "codecarbon_artifacts"
         fi
 
-#    - name: Initialize history CSV if missing
-#      run: |
-#        if [ ! -f codecarbon_artifacts/history.csv ]; then
-#          echo "timestamp,emissions_kg,energy_kwh" > codecarbon_artifacts/history.csv
-#        else
-#          sed -i '1s/.*/timestamp,emissions_kg,energy_kwh/' codecarbon_artifacts/history.csv
-#        fi
+    - name: Initialize history CSV if missing
+      run: |
+        if [ ! -f codecarbon_artifacts/history.csv ]; then
+          echo "timestamp,emissions_kg,energy_kwh" > codecarbon_artifacts/history.csv
+        else
+          sed -i '1s/.*/timestamp,emissions_kg,energy_kwh/' codecarbon_artifacts/history.csv
+        fi
 
 #    - name: Append latest run to history
 #      run: |
@@ -179,13 +179,13 @@ jobs:
 #        from datetime import datetime
 #
 #        # load new emission
-#        new = pd.read_csv("emissions.csv").iloc[-1]
+#        new = pd.read_csv("codecarbon_artifacts/history.csv").iloc[-1]
 #        row = {
 #          "timestamp": datetime.utcnow().strftime("%Y-%m-%dT%H:%M:%SZ"),
 #          "emissions_kg": new.emissions,
 #          "energy_kwh": new.energy_consumed
 #        }
-#        pd.DataFrame([row]).to_csv("emissions_history.csv", mode="a", header=False, index=False)
+#        pd.DataFrame([row]).to_csv("codecarbon_artifacts/history.csv", mode="a", header=False, index=False)
 #        EOF
 #
 #    - name: Generate trend plot
