--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,13 +164,13 @@ jobs:
           mkdir -p "codecarbon_artifacts"
         fi
 
-    - name: Initialize history CSV if missing
-      run: |
-        if [ ! -f codecarbon_artifacts/history.csv ]; then
-          echo "timestamp,emissions_kg,energy_kwh" > codecarbon_artifacts/history.csv
-        else
-          sed -i '1s/.*/timestamp,emissions_kg,energy_kwh/' codecarbon_artifacts/history.csv
-        fi
+#    - name: Initialize history CSV if missing
+#      run: |
+#        if [ ! -f codecarbon_artifacts/history.csv ]; then
+#          echo "timestamp,emissions_kg,energy_kwh" > codecarbon_artifacts/history.csv
+#        else
+#          sed -i '1s/.*/timestamp,emissions_kg,energy_kwh/' codecarbon_artifacts/history.csv
+#        fi
 
 #    - name: Append latest run to history
 #      run: |
@@ -245,7 +245,7 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add README.md
+        git add README.md codecarbon_artifacts/*
 
     - name: Create Pull Request for trend update
       id: create_pr
@@ -262,6 +262,7 @@ jobs:
         signoff: true
         add-paths: |
           README.md
+          codecarbon_artifacts
 
     - name: Merge Pull Request
       uses: juliangruber/merge-pull-request-action@v1
