--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -245,7 +245,7 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add README.md codecarbon_artifacts/*
+        git add README.md codecarbon_artifacts
 
     - name: Create Pull Request for trend update
       id: create_pr
