--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,66 +67,66 @@ jobs:
         name: codecarbon
         path: codecarbon.log
 
-#  #============================================================================================
-#  # COMMENT ===================================================================================
-#  #============================================================================================
-#  comment:
-#    needs: execute
-#    if: github.event_name == 'pull_request'
-#
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - name: Checkout code
-#      uses: actions/checkout@v3
-#
-#    # import emmisions.csv as artifact
-#    - name: Download the emissions artifact
-#      uses: actions/download-artifact@v4
-#      with:
-#        name: emissions
-#        path: .
-#
-#    # import codecarbon.log as artifact
-#    - name: Download the emissions artifact
-#      uses: actions/download-artifact@v4
-#      with:
-#        name: codecarbon
-#        path: .
-#
-#    # read emissions.csv to create emission.md
-#    - name: Write comment body to file
-#      run: |
-#        pip install pandas
-#        python - << 'EOF'
-#        import pandas as pd
-#        df = pd.read_csv("emissions.csv")
-#        s = df.iloc[-1]
-#        with open("emissions.md", "w") as f:
-#            f.write(f"""**Carbon Emissions Report:**
-#              - CO₂ emitted: {s.emissions:.4f} kg
-#              - Energy consumed: {s.energy_consumed:.4f} kWh
-#              - Country: {s.country_iso_code}
-#            """)
-#        EOF
-#
-#    # read codecarbon.log to create add to emissions.md
-#    - name: Append all warnings to emissions comment
-#      run: |
-#        if grep -q "WARNING" codecarbon.log; then
-#          echo -e "\n**⚠️ Notes:**" >> emissions.md
-#          # Strip leading timestamp/brackets and prefix each warning with “- ”
-#          grep -E "WARNING" codecarbon.log | sed -E 's/^\[[^]]+\] */- /' >> emissions.md
-#        fi
-#
-#    # push the emissions.md to the PR as comment
-#    - name: Comment emissions on PR
-#      if: github.event_name == 'pull_request'
-#      uses: peter-evans/create-or-update-comment@v4
-#      with:
-#        token: ${{ secrets.GITHUB_TOKEN }}
-#        issue-number: ${{ github.event.pull_request.number }}
-#        body-path: emissions.md
+  #============================================================================================
+  # COMMENT ===================================================================================
+  #============================================================================================
+  comment:
+    needs: execute
+    if: github.event_name == 'pull_request'
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # import emmisions.csv as artifact
+    - name: Download the emissions artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: emissions
+        path: .
+
+    # import codecarbon.log as artifact
+    - name: Download the emissions artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: codecarbon
+        path: .
+
+    # read emissions.csv to create emission.md
+    - name: Write comment body to file
+      run: |
+        pip install pandas
+        python - << 'EOF'
+        import pandas as pd
+        df = pd.read_csv("emissions.csv")
+        s = df.iloc[-1]
+        with open("emissions.md", "w") as f:
+            f.write(f"""**Carbon Emissions Report:**
+              - CO₂ emitted: {s.emissions:.4f} kg
+              - Energy consumed: {s.energy_consumed:.4f} kWh
+              - Country: {s.country_iso_code}
+            """)
+        EOF
+
+    # read codecarbon.log to create add to emissions.md
+    - name: Append all warnings to emissions comment
+      run: |
+        if grep -q "WARNING" codecarbon.log; then
+          echo -e "\n**⚠️ Notes:**" >> emissions.md
+          # Strip leading timestamp/brackets and prefix each warning with “- ”
+          grep -E "WARNING" codecarbon.log | sed -E 's/^\[[^]]+\] */- /' >> emissions.md
+        fi
+
+    # push the emissions.md to the PR as comment
+    - name: Comment emissions on PR
+      if: github.event_name == 'pull_request'
+      uses: peter-evans/create-or-update-comment@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body-path: emissions.md
 
   #============================================================================================
   # GRAPH   ===================================================================================
@@ -227,19 +227,10 @@ jobs:
         # Replace content between the markers
         awk '
           BEGIN {in_block=0}
-          /<!-- EMISSIONS_GRAPH -->/ {print; print "![Emissions Over Time](codecarbon_artifacts/README_emissions_trend.png)"; in_block=1; next}
+          /<!-- EMISSIONS_GRAPH -->/ {print; print "![Emissions Over Time](codecarbon_artifacts/emissions_trend.png)"; in_block=1; next}
           /<!-- END_EMISSIONS_GRAPH -->/ {in_block=0}
           !in_block
         ' README.md > temp.md && mv temp.md README.md
-
-    - name: Ensure README.md exists and append timestamp
-      shell: bash
-      run: |
-        if [ ! -f README.md ]; then
-          echo "# Project README" > README.md
-        fi
-        echo "" >> README.md
-        echo "Last updated: $(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> README.md
 
     - name: Commit changes
       run: |
