--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: Run CodeCarbon Emissions Tracker
 
 on:
-  #pull_request:
-  #  branches: [ main ]
+  pull_request:
+    branches: [ main ]
   push:
     branches: [ main ]
 
